select label truncated fix

--- a/src/app/tic-tac-toe/tic-tac-toe.component.css
+++ b/src/app/tic-tac-toe/tic-tac-toe.component.css
@@ -20,7 +20,7 @@
 }
 
 .select-difficulty {
-    width: 200px;
+    width: 100%;
 }
 
 .is-human-switch-wrapper {
